k8s/production/ingress/ingress_https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: light-messages-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: http-01-production
spec:
  ingressClassName: external-nginx
  tls:
    - hosts:
        - yourdomain.com
      secretName: yourdomain.com
  rules:
    - host: yourdomain.com
      http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: channels-service
                port:
                  number: 8080
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
          - path: /admin_123
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80    # Changed from 8000 to 80
